# govm

./: .gitignore  CHANGELOG.md  CONTRIBUTING.md  Cargo.toml  Cross.toml  FEATURES.md  Makefile  PLATFORMS.md  README.md  RELEASE_CHECKLIST.md
.github/workflows/: release-all.yml  release.yml
scripts/: install.ps1  install.sh
src/: cli.rs  download.rs  install.rs  main.rs  switch.rs  system_go.rs  utils.rs  version.rs
