[package]
name = "govm"
version = "0.1.0"
edition = "2021"
authors = ["GoVM Contributors"]
description = "A Go version manager written in Rust"
license = "MIT"
repository = "https://github.com/wangystrive/govm"
homepage = "https://github.com/wangystrive/govm"
keywords = ["golang", "go", "version-manager", "cli", "tool"]
categories = ["command-line-utilities", "development-tools"]
rust-version = "1.70"

[dependencies]
clap = { version = "4.4", features = ["derive"] }
reqwest = { version = "0.11", features = ["json", "stream"] }
tokio = { version = "1.34", features = ["full"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
anyhow = "1.0"
dirs = "5.0"
colored = "2.0"
indicatif = "0.17"
tempfile = "3.8"
tar = "0.4"
flate2 = "1.0"
zip = "0.6"
futures-util = "0.3"
regex = "1.10"
walkdir = "2.4"
sha2 = "0.10"
hex = "0.4"

[profile.release]
opt-level = 3
lto = true
